--- a/configure.ac
+++ b/configure.ac
@@ -7120,6 +7120,7 @@ SRCDIRS="\
   Modules/_testlimitedcapi \
   Modules/_xxtestfuzz \
   Modules/cjkcodecs \
+  Modules/_pyodide_core \
   Modules/expat \
   Modules/_zstd \
   Objects \
@@ -7639,10 +7640,10 @@ AC_DEFUN([PY_STDLIB_MOD_SET_NA], [
 # stdlib not available
 dnl Modules that are not available on some platforms
 AS_CASE([$ac_sys_system],
-  [AIX], [PY_STDLIB_MOD_SET_NA([_scproxy])],
-  [VxWorks*], [PY_STDLIB_MOD_SET_NA([_scproxy], [termios], [grp])],
+  [AIX], [PY_STDLIB_MOD_SET_NA([_scproxy], [_pyodide_core])],
+  [VxWorks*], [PY_STDLIB_MOD_SET_NA([_scproxy], [_pyodide_core], [termios], [grp])],
   dnl The _scproxy module is available on macOS
-  [Darwin], [],
+  [Darwin], [PY_STDLIB_MOD_SET_NA([_pyodide_core])],
   [iOS], [
     dnl subprocess and multiprocessing are not supported (no fork syscall).
     dnl curses and tkinter user interface are not available.
@@ -7656,6 +7657,7 @@ AS_CASE([$ac_sys_system],
       [_posixshmem],
       [_posixsubprocess],
       [_scproxy],
+      [_pyodide_core],
       [_tkinter],
       [grp],
       [nis],
@@ -7665,9 +7667,9 @@ AS_CASE([$ac_sys_system],
       [syslog],
     )
   ],
-  [CYGWIN*], [PY_STDLIB_MOD_SET_NA([_scproxy])],
-  [QNX*], [PY_STDLIB_MOD_SET_NA([_scproxy])],
-  [FreeBSD*], [PY_STDLIB_MOD_SET_NA([_scproxy])],
+  [CYGWIN*], [PY_STDLIB_MOD_SET_NA([_scproxy], [_pyodide_core])],
+  [QNX*], [PY_STDLIB_MOD_SET_NA([_scproxy], [_pyodide_core])],
+  [FreeBSD*], [PY_STDLIB_MOD_SET_NA([_scproxy], [_pyodide_core])],
   [Emscripten], [
     dnl subprocess and multiprocessing are not supported (no fork syscall).
     dnl curses and tkinter user interface are not available.
@@ -7712,6 +7714,7 @@ AS_CASE([$ac_sys_system],
       [_posixshmem],
       [_posixsubprocess],
       [_scproxy],
+      [_pyodide_core],
       [_tkinter],
       [_interpreters],
       [_interpchannels],
@@ -7737,7 +7740,7 @@ AS_CASE([$ac_sys_system],
       [xxlimited_35],
     )
   ],
-  [PY_STDLIB_MOD_SET_NA([_scproxy])]
+  [PY_STDLIB_MOD_SET_NA([_scproxy], [_pyodide_core])]
 )
 
 dnl AC_MSG_NOTICE([m4_set_list([_PY_STDLIB_MOD_SET_NA])])
@@ -7868,6 +7871,7 @@ PY_STDLIB_MOD([_scproxy],
   [], [-framework SystemConfiguration -framework CoreFoundation])
 PY_STDLIB_MOD([syslog], [], [test "$ac_cv_header_syslog_h" = yes])
 PY_STDLIB_MOD([termios], [], [test "$ac_cv_header_termios_h" = yes])
+PY_STDLIB_MOD([_pyodide_core], [], [])
 
 dnl _elementtree loads libexpat via CAPI hook in pyexpat
 PY_STDLIB_MOD([pyexpat],
