Add python2js and test

--- a/Makefile.pre.in
+++ b/Makefile.pre.in
@@ -3352,7 +3352,7 @@ MODULE__CODECS_KR_DEPS=$(srcdir)/Modules/cjkcodecs/mappings_kr.h $(CODECS_COMMON
 MODULE__CODECS_TW_DEPS=$(srcdir)/Modules/cjkcodecs/mappings_tw.h $(CODECS_COMMON_HEADERS)
 MODULE__MULTIBYTECODEC_DEPS=$(srcdir)/Modules/cjkcodecs/multibytecodec.h
 
-MODULE__PYODIDE_CORE_DEPS=$(srcdir)/Modules/_pyodide_core/error_handling.h $(srcdir)/Modules/_pyodide_core/jslib.h Modules/_pyodide_core/jsmemops.h $(srcdir)/Modules/_pyodide_core/js2python.h
+MODULE__PYODIDE_CORE_DEPS=$(srcdir)/Modules/_pyodide_core/error_handling.h $(srcdir)/Modules/_pyodide_core/jslib.h $(srcdir)/Modules/_pyodide_core/jsmemops.h $(srcdir)/Modules/_pyodide_core/js2python.h $(srcdir)/Modules/_pyodide_core/python2js.h
 
 # IF YOU PUT ANYTHING HERE IT WILL GO AWAY
 # Local Variables:
