--- a/Modules/Setup.stdlib.in
+++ b/Modules/Setup.stdlib.in
@@ -172,7 +172,7 @@
 
 ############################################################################
 # Emscripten specific modules
-@MODULE__PYODIDE_CORE_TRUE@_pyodide_core _pyodide_core/_pyodide_core.c _pyodide_core/error_handling.c _pyodide_core/js2python.c _pyodide_core/python2js.c _pyodide_core/jslib_asm.s _pyodide_core/jslib.c _pyodide_core/hiwire.c
+@MODULE__PYODIDE_CORE_TRUE@_pyodide_core _pyodide_core/_pyodide_core.c _pyodide_core/error_handling.c _pyodide_core/js2python.c _pyodide_core/python2js.c _pyodide_core/jslib_asm.s _pyodide_core/jslib.c _pyodide_core/hiwire.c _pyodide_core/jsproxy.c
 
 
 ############################################################################
