Very basic working pyproxy

--- a/configure.ac
+++ b/configure.ac
@@ -2352,7 +2352,12 @@ AS_CASE([$ac_sys_system],
     dnl some hiwire functions
     AS_VAR_APPEND([LINKFORSHARED], ["_hiwire_intern,"])
     AS_VAR_APPEND([LINKFORSHARED], ["_hiwire_get,"])
-    AS_VAR_APPEND([LINKFORSHARED], ["_JsProxy_create"])
+    AS_VAR_APPEND([LINKFORSHARED], ["_JsProxy_create,"])
+    AS_VAR_APPEND([LINKFORSHARED], ["_Py_IncRef,"])
+    AS_VAR_APPEND([LINKFORSHARED], ["_Py_DecRef,"])
+    AS_VAR_APPEND([LINKFORSHARED], ["_pythonexc2js,"])
+    AS_VAR_APPEND([LINKFORSHARED], ["__pyproxy_type,"])
+    AS_VAR_APPEND([LINKFORSHARED], ["__pyproxy_str"])
 
 
     AS_VAR_APPEND([LINKFORSHARED], [" -sSTACK_SIZE=5MB"])
